--- a/01-single-page-cv/cv.html
+++ b/01-single-page-cv/cv.html
@@ -4,6 +4,7 @@
         <title>CV</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/x-icon" href="favicon-32x32.png">
     </head>
     <body>
         <hr>
